# Mpi_image_processing_with_communication_thread

./: CMakeLists.txt  LICENSE  NHPC.pptx  README.md
distributed_computing/: main.c
single_core_function/: imageProcessing.c
src/: config.h  image_loader.c  image_loader.h  main.c  pca.c  pca.h  statistics.c  statistics.h  stb_image.h  stb_image_write.h  timer.c  timer.h
